--- a/src/html/dash-1.html
+++ b/src/html/dash-1.html
@@ -179,17 +179,13 @@
               <img class="dashboard-1-icon" alt="" src="../../public/dashboard-1.svg" />
               <div class="sales">Dashboard</div>
             </button>
-            <button class="nav" id="commandes">
+            <!-- <button class="nav" id="commandes">
               <img class="shopping-cart-1-icon" alt="" src="../../public/shoppingcart-1.svg" />
               <div class="sales">sales</div>
-            </button>
+            </button> -->
             <button class="nav" id="produita">
               <img class="shopping-cart-1-icon" alt="" src="../../public/product-1-1.svg" />
-<<<<<<< HEAD
               <div class="sales">Products</div>
-=======
-              <div class="sales"><a>Products</a></div>
->>>>>>> 5af55c70b40f5f19378a86cab6335bd9253f8bbd
             </button>
             <button id="addtyli" class="nav3">
               <img class="shopping-cart-1-icon" alt="" src="../../img/add.png" />
@@ -198,10 +194,10 @@
             <button class="nav3" id="validate">
               <img class="shopping-cart-1-icon" alt="" src="../../public/delivery-1-1.svg" />
               <div class="sales">Delivery</div>
-            </button><button class="nav">
+            <!-- </button><button class="nav">
               <img class="shopping-cart-1-icon" alt="" src="../../public/shop-1.svg" />
               <div class="sales">Your store</div>
-            </button>
+            </button> -->
             </button>
             <button class="nav" id="addpro">
               <img class="shopping-cart-1-icon" alt="" src="../../img/add.product.png" />
@@ -251,11 +247,7 @@
     const produit = document.getElementById('produita');
     produit.addEventListener('click', function () {
       // Navigate to the desired page
-<<<<<<< HEAD
       window.location.href = './dash_product.html'; // Replace 'page-x.html' with the actual page URL
-=======
-      window.location.href = '../html/dash_product.html'; // Replace 'page-x.html' with the actual page URL
->>>>>>> 5af55c70b40f5f19378a86cab6335bd9253f8bbd
     });
     //hna
     // const commandes = document.getElementById('commandes');
