--- a/src/html/add-cat.html
+++ b/src/html/add-cat.html
@@ -158,9 +158,8 @@ document.getElementById("categoryImage3").addEventListener("change", function (e
             // formData.append("name", categoryName);
             // formData.append("image", categoryImages);
             //  console.log(formData)
-            const token = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VySWQiOiI2NDZjMDhhN2UxOWMyNjNmNTllNjFhN2YiLCJpYXQiOjE2ODQ4MDE5NjYsImV4cCI6MTY5MjU3Nzk2Nn0.M5SILMk_aRSj4Kum_SN2VV193-1h6XtHcbAMIkaKnGY';
 
-            var a = sessionStorage.getItem('token');
+            var a = localStorage.getItem('admintoken');
             console.log(a) ;
             axios.post("https://buy-it-sigma.herokuapp.com/api/v1/categories",formData, {headers :{
                 Authorization : 'Bearer '+a,
