--- a/home.html
+++ b/home.html
@@ -293,7 +293,7 @@
 
             <!-- Brands -->
 
-            <div style="display: none;" class="trending">
+            <div class="trending">
                 <div class="container">
                     <div class="wrapper">
                         <div class="sectop flexitem">
@@ -304,26 +304,13 @@
                                 <div class="row products big">
                                     <div class="item">
                                         <div class="offer">
-                                            <p>Offer ends at</p>
-                                            <ul class="flexcenter" id="demo">
-                                                <li id="days"></li>
-                                                <li id="hours"></li>
-                                                <li id="minutes"></li>
-                                                <li id="seconds"></li>
-                                            </ul>
+                                            <p>The king of Products</p>
                                         </div>
                                         <div class="media">
                                             <div class="image">
                                                 <a href="page-offer.html">
                                                     <img id="special-offre-img" alt="">
                                                 </a>
-                                            </div>
-                                            <div class="hoverable">
-                                                <ul>
-                                                    <li class="active"><a href="#"><i class="ri-heart-line"></i></a></li>
-                                                    <li><a href="#"><i class="ri-eye-line"></i></a></li>
-                                                    <li><a href="#"><i class="ri-shuffle-line"></i></a></li>
-                                                </ul>
                                             </div>
                                             <div class="discount circle flexcenter"><span id="discount-offer"></span></div>
                                         </div>
@@ -733,7 +720,7 @@
                 </div>
             </div>
             <!-- all product -->
-            <div style="margin-top: 25px;" class="features">
+            <div class="features">
                 <div class="container">
                     <div class="wrapper">
                         <div class="column">
